ChemInfo/Antlr Generated Files/smilesParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from smiles.g4 by ANTLR 4.7

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7")]
[System.CLSCompliant(false)]
public partial class smilesParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		ELEMENT=53, ORGANIC_SYMBOL=54, AROMATIC_SYMBOL=55, WILDCARD=56, DIGIT=57;
	public const int
		RULE_smiles = 0, RULE_chain = 1, RULE_branched_atom = 2, RULE_branch = 3, 
		RULE_ringbond = 4, RULE_bond = 5, RULE_dot = 6, RULE_atom = 7, RULE_symbol = 8, 
		RULE_organic = 9, RULE_aromatic = 10, RULE_chiral = 11, RULE_charge = 12, 
		RULE_hcount = 13, RULE_atomclass = 14, RULE_isotope = 15;
	public static readonly string[] ruleNames = {
		"smiles", "chain", "branched_atom", "branch", "ringbond", "bond", "dot", 
		"atom", "symbol", "organic", "aromatic", "chiral", "charge", "hcount", 
		"atomclass", "isotope"
	};

	private static readonly string[] _LiteralNames = {
		null, "'('", "')'", "'%'", "'-'", "'='", "'#'", "'$'", "':'", "'/'", "'''", 
		"'.'", "'['", "']'", "'B'", "'C'", "'N'", "'O'", "'S'", "'P'", "'F'", 
		"'Cl'", "'Br'", "'I'", "'b'", "'c'", "'n'", "'o'", "'p'", "'s'", "'se'", 
		"'as'", "'@'", "'@@'", "'@TH1'", "'@TH2'", "'@AL1'", "'@AL2'", "'@SP1'", 
		"'@SP2'", "'@SP3'", "'@TB1'", "'@TB2'", "'@TB3'", "'@TB30'", "'@OH1'", 
		"'@OH2'", "'@OH3'", "'@OH30'", "'+'", "'--'", "'++'", "'H'", null, null, 
		null, "'*'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "ELEMENT", "ORGANIC_SYMBOL", "AROMATIC_SYMBOL", 
		"WILDCARD", "DIGIT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "smiles.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static smilesParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public smilesParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public smilesParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class SmilesContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(smilesParser.Eof, 0); }
		public ChainContext chain() {
			return GetRuleContext<ChainContext>(0);
		}
		public SmilesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_smiles; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.EnterSmiles(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.ExitSmiles(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsmilesVisitor<TResult> typedVisitor = visitor as IsmilesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSmiles(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SmilesContext smiles() {
		SmilesContext _localctx = new SmilesContext(Context, State);
		EnterRule(_localctx, 0, RULE_smiles);
		int _la;
		try {
			State = 43;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 33;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__11) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__30))) != 0)) {
					{
					State = 32; chain(0);
					}
				}

				State = 35; Match(Eof);
				}
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 40;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__0) {
					{
					State = 36; Match(T__0);
					State = 37; chain(0);
					State = 38; Match(T__1);
					}
				}

				State = 42; Match(Eof);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ChainContext : ParserRuleContext {
		public Branched_atomContext branched_atom() {
			return GetRuleContext<Branched_atomContext>(0);
		}
		public ChainContext chain() {
			return GetRuleContext<ChainContext>(0);
		}
		public BondContext bond() {
			return GetRuleContext<BondContext>(0);
		}
		public DotContext dot() {
			return GetRuleContext<DotContext>(0);
		}
		public ChainContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_chain; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.EnterChain(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.ExitChain(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsmilesVisitor<TResult> typedVisitor = visitor as IsmilesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitChain(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ChainContext chain() {
		return chain(0);
	}

	private ChainContext chain(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		ChainContext _localctx = new ChainContext(Context, _parentState);
		ChainContext _prevctx = _localctx;
		int _startState = 2;
		EnterRecursionRule(_localctx, 2, RULE_chain, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 46; branched_atom();
			}
			Context.Stop = TokenStream.LT(-1);
			State = 60;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 58;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
					case 1:
						{
						_localctx = new ChainContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_chain);
						State = 48;
						if (!(Precpred(Context, 3))) throw new FailedPredicateException(this, "Precpred(Context, 3)");
						State = 49; branched_atom();
						}
						break;
					case 2:
						{
						_localctx = new ChainContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_chain);
						State = 50;
						if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
						State = 51; bond();
						State = 52; branched_atom();
						}
						break;
					case 3:
						{
						_localctx = new ChainContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_chain);
						State = 54;
						if (!(Precpred(Context, 1))) throw new FailedPredicateException(this, "Precpred(Context, 1)");
						State = 55; dot();
						State = 56; branched_atom();
						}
						break;
					}
					} 
				}
				State = 62;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class Branched_atomContext : ParserRuleContext {
		public AtomContext atom() {
			return GetRuleContext<AtomContext>(0);
		}
		public RingbondContext[] ringbond() {
			return GetRuleContexts<RingbondContext>();
		}
		public RingbondContext ringbond(int i) {
			return GetRuleContext<RingbondContext>(i);
		}
		public BranchContext[] branch() {
			return GetRuleContexts<BranchContext>();
		}
		public BranchContext branch(int i) {
			return GetRuleContext<BranchContext>(i);
		}
		public BondContext[] bond() {
			return GetRuleContexts<BondContext>();
		}
		public BondContext bond(int i) {
			return GetRuleContext<BondContext>(i);
		}
		public Branched_atomContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_branched_atom; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.EnterBranched_atom(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.ExitBranched_atom(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsmilesVisitor<TResult> typedVisitor = visitor as IsmilesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBranched_atom(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Branched_atomContext branched_atom() {
		Branched_atomContext _localctx = new Branched_atomContext(Context, State);
		EnterRule(_localctx, 4, RULE_branched_atom);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 63; atom();
			State = 70;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,6,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 65;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9))) != 0)) {
						{
						State = 64; bond();
						}
					}

					State = 67; ringbond();
					}
					} 
				}
				State = 72;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,6,Context);
			}
			State = 76;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,7,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 73; branch();
					}
					} 
				}
				State = 78;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,7,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BranchContext : ParserRuleContext {
		public ChainContext chain() {
			return GetRuleContext<ChainContext>(0);
		}
		public BondContext bond() {
			return GetRuleContext<BondContext>(0);
		}
		public DotContext dot() {
			return GetRuleContext<DotContext>(0);
		}
		public BranchContext branch() {
			return GetRuleContext<BranchContext>(0);
		}
		public BranchContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_branch; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.EnterBranch(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.ExitBranch(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsmilesVisitor<TResult> typedVisitor = visitor as IsmilesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBranch(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BranchContext branch() {
		BranchContext _localctx = new BranchContext(Context, State);
		EnterRule(_localctx, 6, RULE_branch);
		try {
			State = 97;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 79; Match(T__0);
				State = 80; chain(0);
				State = 81; Match(T__1);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 83; Match(T__0);
				State = 84; bond();
				State = 85; chain(0);
				State = 86; Match(T__1);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 88; Match(T__0);
				State = 89; dot();
				State = 90; chain(0);
				State = 91; Match(T__1);
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 93; Match(T__0);
				State = 94; branch();
				State = 95; Match(T__1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RingbondContext : ParserRuleContext {
		public ITerminalNode[] DIGIT() { return GetTokens(smilesParser.DIGIT); }
		public ITerminalNode DIGIT(int i) {
			return GetToken(smilesParser.DIGIT, i);
		}
		public RingbondContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ringbond; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.EnterRingbond(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.ExitRingbond(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsmilesVisitor<TResult> typedVisitor = visitor as IsmilesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRingbond(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RingbondContext ringbond() {
		RingbondContext _localctx = new RingbondContext(Context, State);
		EnterRule(_localctx, 8, RULE_ringbond);
		try {
			State = 103;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__2:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 99; Match(T__2);
				State = 100; Match(DIGIT);
				State = 101; Match(DIGIT);
				}
				}
				break;
			case DIGIT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 102; Match(DIGIT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BondContext : ParserRuleContext {
		public BondContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bond; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.EnterBond(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.ExitBond(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsmilesVisitor<TResult> typedVisitor = visitor as IsmilesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBond(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BondContext bond() {
		BondContext _localctx = new BondContext(Context, State);
		EnterRule(_localctx, 10, RULE_bond);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 105;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DotContext : ParserRuleContext {
		public DotContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dot; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.EnterDot(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.ExitDot(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsmilesVisitor<TResult> typedVisitor = visitor as IsmilesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDot(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DotContext dot() {
		DotContext _localctx = new DotContext(Context, State);
		EnterRule(_localctx, 12, RULE_dot);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107; Match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AtomContext : ParserRuleContext {
		public SymbolContext symbol() {
			return GetRuleContext<SymbolContext>(0);
		}
		public IsotopeContext isotope() {
			return GetRuleContext<IsotopeContext>(0);
		}
		public ChiralContext chiral() {
			return GetRuleContext<ChiralContext>(0);
		}
		public HcountContext hcount() {
			return GetRuleContext<HcountContext>(0);
		}
		public ChargeContext charge() {
			return GetRuleContext<ChargeContext>(0);
		}
		public AtomclassContext atomclass() {
			return GetRuleContext<AtomclassContext>(0);
		}
		public OrganicContext organic() {
			return GetRuleContext<OrganicContext>(0);
		}
		public AromaticContext aromatic() {
			return GetRuleContext<AromaticContext>(0);
		}
		public AtomContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_atom; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.EnterAtom(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.ExitAtom(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsmilesVisitor<TResult> typedVisitor = visitor as IsmilesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAtom(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AtomContext atom() {
		AtomContext _localctx = new AtomContext(Context, State);
		EnterRule(_localctx, 14, RULE_atom);
		int _la;
		try {
			State = 130;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__11:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 109; Match(T__11);
				State = 111;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==DIGIT) {
					{
					State = 110; isotope();
					}
				}

				State = 113; symbol();
				State = 115;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << T__40) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << T__47))) != 0)) {
					{
					State = 114; chiral();
					}
				}

				State = 118;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__51) {
					{
					State = 117; hcount();
					}
				}

				State = 121;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__48) | (1L << T__49) | (1L << T__50))) != 0)) {
					{
					State = 120; charge();
					}
				}

				State = 124;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__7) {
					{
					State = 123; atomclass();
					}
				}

				State = 126; Match(T__12);
				}
				}
				break;
			case T__13:
			case T__14:
			case T__15:
			case T__16:
			case T__17:
			case T__18:
			case T__19:
			case T__20:
			case T__21:
			case T__22:
				EnterOuterAlt(_localctx, 2);
				{
				State = 128; organic();
				}
				break;
			case T__23:
			case T__24:
			case T__25:
			case T__26:
			case T__27:
			case T__28:
			case T__29:
			case T__30:
				EnterOuterAlt(_localctx, 3);
				{
				State = 129; aromatic();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SymbolContext : ParserRuleContext {
		public ITerminalNode ELEMENT() { return GetToken(smilesParser.ELEMENT, 0); }
		public OrganicContext organic() {
			return GetRuleContext<OrganicContext>(0);
		}
		public AromaticContext aromatic() {
			return GetRuleContext<AromaticContext>(0);
		}
		public ITerminalNode WILDCARD() { return GetToken(smilesParser.WILDCARD, 0); }
		public SymbolContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_symbol; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.EnterSymbol(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsmilesListener typedListener = listener as IsmilesListener;
			if (typedListener != null) typedListener.ExitSymbol(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsmilesVisitor<TResult> typedVisitor = visitor as IsmilesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSymbol(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SymbolContext symbol() {
		SymbolContext _localctx = new SymbolContext(Context, State);
		EnterRule(_localctx, 16, RULE_symbol);
		try {
			State = 136;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case ELEMENT:
				EnterOuterAlt(_localctx, 1);
				{
				State = 132; Match(ELEMENT);
				}
				break;
			case T__13:
			case T__14:
			case T__15:
			case T__16:
			case T__17:
			case T__18:
			case T__19:
			case T__20:
			case T__21:
			case T__22:
				EnterOuterAlt(_localctx, 2);
				{
				State = 133; organic();
				}
				break;
			case T__23:
			case T__24:
			case T__25:
			case T__26:
			case T__27:
			case T__28:
			case T__29:
			case T__30:
				EnterOuterAlt(_localctx, 3);
				{
				State = 134; aromatic();
				}
				break;
			case WILDCARD:
				EnterOuterAlt(_localctx, 4);
				{
				State = 135; Match(WILDCARD);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
